[KNOWAGE-4762] Add security policy to Docker image