@@ -169,12 +169,18 @@ WORKDIR ${KNOWAGE_DIRECTORY}/${APACHE_TOMCAT_PACKAGE}/conf
 # Override Apache Tomcat server configuration
 COPY server.xml ./
 
+# Copy Knowage Security Policy
+COPY knowage-default.policy ./
+
 WORKDIR ${KNOWAGE_DIRECTORY}/${APACHE_TOMCAT_PACKAGE}/bin
 
 #make the script executable by bash (not only sh) and
 #make knowage running forever without exiting when running the container
 RUN sed -i "s/bin\/sh/bin\/bash/" startup.sh && \
 	sed -i "s/EXECUTABLE\" start/EXECUTABLE\" run/" startup.sh
+
+# Enable Security Manager
+RUN echo "export JAVA_OPTS=\"$JAVA_OPTS -Djava.security.manager -Djava.security.policy=$CATALINA_HOME/conf/knowage-default.policy\"" >> setenv.sh
 
 #copy entrypoint to be used at runtime
 COPY ./entrypoint.sh ./ \
